--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <body>
     <div id="root"><div class="loading"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
